✨ (menu.html, main.css): enhance navigation bar and adjust layout for better user experience The navigation bar is now fixed to the top of the page, improving accessibility. The menu items have been updated for clarity, and the layout has been adjusted to ensure proper spacing with a new top padding for the body. This provides a more user-friendly interface and ensures that the navbar does not overlap with the content.

--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -3,6 +3,9 @@
     --primary-color-hover: rgba(42, 165, 96, 0.9);
 }
 
+body {
+    padding-top: 60px;
+}
 .hero-section {
     height: 100vh;
     display: flex;
